# demographic_projection

./: .gitignore  README.md  pyproject.toml
src/demoproj/: __init__.py  cli.py  countries.py  data.py  fertility.py  fetch.py  model.py  mortality.py  plotting.py
